--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+html{
+    width: 100%;
+	background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: safe center;
+    align-items: center;
+}
 head{
 	background-color: #2C2F33;
 	color: black;
@@ -25,22 +34,164 @@ footer{
 	width: 20px;
 	height: 20px;
 }
-.box{
-	width: 400px;
-	height: 400px;
-	background: #fff0bc;
-	margin: 20px auto 0 auto;
-	text-align: center;
-	position: relative;
 
+.accueil{
+	height: 100%;
+	width: 100%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
-.loader{
-	position: absolute;
-	width: 150px;
+.accueil h1{
+	text-align: center;
+}
+/* loader */
 
-.hidden{
-	display: none;
+.loader {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
+.lettre {
+    color: #484848;
+    font-size: 80px;
+    letter-spacing: 15px;
+    margin-bottom: 150px;
+    animation: flash 1.2s linear infinite;
+}
+@keyframes flash {
+    0% {
+        color: #32CD32;
+        text-shadow: 0 0 7px #32CD32;
+    }
+    90% {
+        color: #32CD32;
+        text-shadow: none;
+    }
+    100% {
+        color: #32CD32;
+        text-shadow: 0 0 7px #32CD32;
+    }
+}
+.lettre:nth-child(1){
+    animation-delay: 0.1s;
+}
+.lettre:nth-child(2){
+    animation-delay: 0.2s;
+}
+.lettre:nth-child(3){
+    animation-delay: 0.3s;
+}
+.lettre:nth-child(4){
+    animation-delay: 0.4s;
+}
+.lettre:nth-child(5){
+    animation-delay: 0.5s;
+}
+.lettre:nth-child(6){
+    animation-delay: 0.6s;
+}
+.lettre:nth-child(7){
+    animation-delay: 0.7s;
+}
+.lettre:nth-child(8){
+    animation-delay: 0.8s;
+}
+.lettre:nth-child(9){
+    animation-delay: 0.9s;
+}
+.lettre:nth-child(10){
+    animation-delay: 1s;
+}
+.fondu-out {
+    opacity: 0;
+    transition: opacity 0.4s ease-out;
+}
+*, ::before, ::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: Montserrat, sans-serif;
+    padding-bottom: 250px;
+}
+
+.content {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.content h1 {
+    font-family: Raleway, sans-serif;
+    font-size: 60px;
+    padding: 0.5em 0;
+}
+
+.content p {
+    font-family: Raleway, sans-serif;
+    line-height: 1.6;
+    font-size: 18px;
+}
+
+.slide-in {
+    max-width: 900px;
+    margin: 50px auto;
+    background: linear-gradient(to right, #006400, #008000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    padding: 20px;
+    transform: translateX(-100%);
+    opacity: 0;
+    transition: transform 0.6s ease-in-out,
+    opacity 0.6s ease-in-out;
+}
+.slide-in.active {
+    transform: translateX(0%);
+    opacity: 1;
+}
+.slide-in h2 {
+    font-size: 40px;
+    text-align: center;
+    color: #f1f1f1;
+}
+
+.slide-in label {
+    display: block;
+    text-align: center;
+    color: #f1f1f1;
+    font-size: 20px;
+    margin: 5px 0 10px;
+}
+.form-group {
+    margin: 20px auto 10px;
+    width: 60%;
+    display: flex;
+}
+.slide-in input {
+    width: 350px;
+    padding: 8px;
+    font-size: 18px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border: none;
+}
+.slide-in button {
+    width: 125px;
+    padding: 5px 12px;
+    font-size: 16px;
+    cursor: pointer;
+    background: rgb(81, 81, 211);
+    color: #f1f1f1;
+    border: none;
+    text-transform: uppercase;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
